--- a/ROZETKA/ROZETKA/ROZETKAUI.csproj
+++ b/ROZETKA/ROZETKA/ROZETKAUI.csproj
@@ -102,5 +102,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{8797da85-e13e-41fd-a506-06b146400659}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{13658e5a-45e6-42ce-a634-4adf31f5cb42}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
