--- a/ROZETKA/DAL/DAL.csproj
+++ b/ROZETKA/DAL/DAL.csproj
@@ -48,17 +48,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Concrate\CategoryRepository.cs" />
+    <Compile Include="Concrate\ProductRepository.cs" />
     <Compile Include="Entities\Categories.cs" />
     <Compile Include="Entities\Context.cs" />
     <Compile Include="Entities\Images.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductAccess.cs" />
+    <Compile Include="Migrations\201908281529244_Start.cs" />
+    <Compile Include="Migrations\201908281529244_Start.Designer.cs">
+      <DependentUpon>201908281529244_Start.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201908281529244_Start.resx">
+      <DependentUpon>201908281529244_Start.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
