--- a/ROZETKA/DAL/DAL.csproj
+++ b/ROZETKA/DAL/DAL.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Entities\Images.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductAccess.cs" />
-    <Compile Include="Migrations\201908281529244_Start.cs" />
-    <Compile Include="Migrations\201908281529244_Start.Designer.cs">
-      <DependentUpon>201908281529244_Start.cs</DependentUpon>
+    <Compile Include="Migrations\201908291759110_Begin work.cs" />
+    <Compile Include="Migrations\201908291759110_Begin work.Designer.cs">
+      <DependentUpon>201908291759110_Begin work.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,8 +70,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201908281529244_Start.resx">
-      <DependentUpon>201908281529244_Start.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201908291759110_Begin work.resx">
+      <DependentUpon>201908291759110_Begin work.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
