--- a/ROZETKA/BLL/BLL.csproj
+++ b/ROZETKA/BLL/BLL.csproj
@@ -37,6 +37,7 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,6 +59,7 @@
     <Compile Include="Models\CategoryDTO.cs" />
     <Compile Include="Models\ImagesDTO.cs" />
     <Compile Include="Models\ProductDTO.cs" />
+    <Compile Include="Models\SpecialDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
