--- a/ROZETKA/DAL/DAL.csproj
+++ b/ROZETKA/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Entities\Images.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductAccess.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Migrations\201908291759110_Begin work.cs" />
     <Compile Include="Migrations\201908291759110_Begin work.Designer.cs">
       <DependentUpon>201908291759110_Begin work.cs</DependentUpon>
